# omaha

./: .gitignore  BUILD.gn  README.md  build_omaha.py  manifest_template.gup
omaha/: main.scons  omaha_version_utils.py
omaha/base/: const_addresses.h  const_object_names.h
omaha/clickonce/: build.scons  clickonce_bootstrap.cs
omaha/client/: help_url_builder.cc
omaha/common/: build.scons  const_goopdate.h  huhi_referral_code_utils.cc  huhi_referral_code_utils.h  huhi_stats_updater.cc  huhi_stats_updater.h
omaha/core/: build.scons
omaha/crashhandler/: build.scons
omaha/enterprise/installer/: build.scons
omaha/google_update/: build.scons
omaha/goopdate/: build.scons  download_manager.cc  install_manager.cc
omaha/installers/: build.scons  tag_meta_installers.py
omaha/mi_exe_stub/: mi.cc  mi.rc  mi_generated_resources_am.rc  mi_generated_resources_ar.rc  mi_generated_resources_bg.rc  mi_generated_resources_bn.rc  mi_generated_resources_ca.rc  mi_generated_resources_cs.rc  mi_generated_resources_da.rc  mi_generated_resources_de.rc  mi_generated_resources_el.rc  mi_generated_resources_en-GB.rc  mi_generated_resources_en.rc  mi_generated_resources_es-419.rc  mi_generated_resources_es.rc  mi_generated_resources_et.rc  mi_generated_resources_fa.rc  mi_generated_resources_fi.rc  mi_generated_resources_fil.rc  mi_generated_resources_fr.rc  mi_generated_resources_gu.rc  mi_generated_resources_hi.rc  mi_generated_resources_hr.rc  mi_generated_resources_hu.rc  mi_generated_resources_id.rc  mi_generated_resources_is.rc  mi_generated_resources_it.rc  mi_generated_resources_iw.rc  mi_generated_resources_ja.rc  mi_generated_resources_kn.rc  mi_generated_resources_ko.rc  mi_generated_resources_lt.rc  mi_generated_resources_lv.rc  mi_generated_resources_ml.rc  mi_generated_resources_mr.rc  mi_generated_resources_ms.rc  mi_generated_resources_nl.rc  mi_generated_resources_no.rc  mi_generated_resources_pl.rc  mi_generated_resources_pt-BR.rc  (+17 more)
omaha/test/: build.scons  test_foo.wxs.xml
omaha/testing/: build.scons
(+115 files in other folders)
